<package>
  <name>lisa_flexbe_states_flexbe_states</name>
  <version>0.0.1</version>
  <description>
     lisa_flexbe_states_flexbe_states provides a collection of interaction messages (utter, input command, sesssion manegement) with LISA
  </description>
  <maintainer email="lawrence.iviani@gmail.com">Lawrence Iviani</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>

  <run_depend>flexbe_core</run_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>lisa_interaction_msgs</build_depend>
  <run_depend>lisa_interaction_msgs</run_depend>

  <export>
    <flexbe_states />
  </export>

</package>
